--- a/node-angular/package.json
+++ b/node-angular/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "express": "3.1.0",
-    "ejs": "0.8.3"
+    "ejs": "0.8.3",
+    "is-disposable-email": "0.0.1"
   },
   "engines": {
     "node": ">=0.8.x"
